Fixed icons flickering

--- a/src/entities/modal.module.css
+++ b/src/entities/modal.module.css
@@ -7,8 +7,6 @@
   border-radius: var(--border-radius);
 
   gap: 0.5rem;
-
-  width: 100%;
 }
 
 .container input {
